; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/ath/extr_regd.c_ath_reg_dyn_country_user_allow.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/ath/extr_regd.c_ath_reg_dyn_country_user_allow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ath_regulatory = type { i32 }

@CONFIG_ATH_REG_DYNAMIC_USER_REG_HINTS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ath_regulatory*)* @ath_reg_dyn_country_user_allow to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ath_reg_dyn_country_user_allow(%struct.ath_regulatory* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ath_regulatory*, align 8
  store %struct.ath_regulatory* %0, %struct.ath_regulatory** %3, align 8
  %4 = load i32, i32* @CONFIG_ATH_REG_DYNAMIC_USER_REG_HINTS, align 4
  %5 = call i32 @IS_ENABLED(i32 %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %14

8:                                                ; preds = %1
  %9 = load %struct.ath_regulatory*, %struct.ath_regulatory** %3, align 8
  %10 = call i32 @dynamic_country_user_possible(%struct.ath_regulatory* %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %8
  store i32 0, i32* %2, align 4
  br label %14

13:                                               ; preds = %8
  store i32 1, i32* %2, align 4
  br label %14

14:                                               ; preds = %13, %12, %7
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local i32 @IS_ENABLED(i32) #1

declare dso_local i32 @dynamic_country_user_possible(%struct.ath_regulatory*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
